src/test/ui/stability-attribute/stability-attribute-sanity.stderr
error[E0541]: unknown meta item 'reason'
  --> $DIR/stability-attribute-sanity.rs:8:42
   |
LL |     #[stable(feature = "a", since = "b", reason)]
   |                                          ^^^^^^ expected one of `since`, `note`

error[E0539]: incorrect meta item
  --> $DIR/stability-attribute-sanity.rs:11:29
   |
LL |     #[stable(feature = "a", since)]
   |                             ^^^^^

error[E0539]: incorrect meta item
  --> $DIR/stability-attribute-sanity.rs:14:14
   |
LL |     #[stable(feature, since = "a")]
   |              ^^^^^^^

error[E0539]: incorrect meta item
  --> $DIR/stability-attribute-sanity.rs:17:29
   |
LL |     #[stable(feature = "a", since(b))]
   |                             ^^^^^^^^

error[E0539]: incorrect meta item
  --> $DIR/stability-attribute-sanity.rs:20:14
   |
LL |     #[stable(feature(b), since = "a")]
   |              ^^^^^^^^^^

error[E0546]: missing 'feature'
  --> $DIR/stability-attribute-sanity.rs:25:5
   |
LL |     #[unstable(issue = "none")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0547]: missing 'issue'
  --> $DIR/stability-attribute-sanity.rs:28:5
   |
LL |     #[unstable(feature = "b")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0546]: missing 'feature'
  --> $DIR/stability-attribute-sanity.rs:31:5
   |
LL |     #[stable(since = "a")]
   |     ^^^^^^^^^^^^^^^^^^^^^^

error[E0542]: missing 'since'
  --> $DIR/stability-attribute-sanity.rs:36:5
   |
LL |     #[stable(feature = "a")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0542]: missing 'since'
  --> $DIR/stability-attribute-sanity.rs:40:5
   |
LL |     #[rustc_deprecated(reason = "a")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0543]: missing 'reason'
  --> $DIR/stability-attribute-sanity.rs:44:5
   |
LL |     #[rustc_deprecated(since = "a")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0544]: multiple stability levels
  --> $DIR/stability-attribute-sanity.rs:49:1
   |
LL | #[stable(feature = "a", since = "b")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0544]: multiple stability levels
  --> $DIR/stability-attribute-sanity.rs:53:1
   |
LL | #[unstable(feature = "b", issue = "none")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0544]: multiple stability levels
  --> $DIR/stability-attribute-sanity.rs:57:1
   |
LL | #[stable(feature = "a", since = "b")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0550]: multiple deprecated attributes
  --> $DIR/stability-attribute-sanity.rs:62:1
   |
LL | #[rustc_deprecated(since = "b", reason = "text")]
   | ------------------------------------------------- first deprecation attribute
LL | #[rustc_deprecated(since = "b", reason = "text")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ repeated deprecation attribute

error[E0544]: multiple stability levels
  --> $DIR/stability-attribute-sanity.rs:64:1
   |
LL | #[rustc_const_unstable(feature = "d", issue = "none")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Invalid stability or deprecation version found
  --> $DIR/stability-attribute-sanity.rs:65:1
   |
LL | pub const fn multiple4() { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0549]: rustc_deprecated attribute must be paired with either stable or unstable attribute
  --> $DIR/stability-attribute-sanity.rs:68:1
   |
LL | #[rustc_deprecated(since = "a", reason = "text")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 18 previous errors

Some errors have detailed explanations: E0539, E0541, E0546, E0550.
For more information about an error, try `rustc --explain E0539`.
